ui and spacing fixes

--- a/style.css
+++ b/style.css
@@ -13,16 +13,44 @@ h3{
 }
 
 #gp {
-    margin: 30px;
+    margin: 35px 0px;
 }
 
-.inputSection{
-  margin:20px;
+.inputGroup{
+  margin:20px 0px;
+}
+
+#inputSection{
+  position: relative;
+  margin-left: 30px;
+  width:fit-content;
+  border: black 2px solid;
+  padding: 0px 30px;
+  border-radius: 8px;
 }
 
 input{
-  width: 60px;
-  margin-right: 30px;
+  width: 4ch;
+  margin-right: 0px;
+  text-align: right;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.units{
+  position: relative;
+  font-size: 0.8em;
+  margin-left: 3px;
 }
 
 #frame{
@@ -37,7 +65,8 @@ input{
 }
 
 #generate{
-  margin: 20px;
+  margin: 20px 60px;
+  width: fit-content;
 }
 
 #downloadButton{
@@ -47,6 +76,3 @@ input{
 #explanation{
   margin: 30px 60px;
 }
-input[type="button"]{ 
-  border: 1 solid;
-} 
